--- a/codeAlpha Projects/resumeBuilder/index.html
+++ b/codeAlpha Projects/resumeBuilder/index.html
@@ -21,7 +21,7 @@
 
               <div class="form-group ">
                 
-                <label for="nameField">Your Name</label>
+                <label for="nameField">Enter Your Name</label>
                 <input type="text" id="nameField" placeholder="Name Here" class="form-control">
             
               </div>
